--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,5 @@
 [pytest]
-addopts = --alluredir=reports
-
-markers =
-    positive_test: только позитивные тесты 
-    negative_test: только негативные тесты
-    api_test: только api-тесты
-    ui_test: только UI-тесты
+testpaths = test
+python_files = *test*.py
+python_classes = *Test*
+python_functions = *test*
